Fixed package names

--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@sloth/server",
+  "name": "@boilerplate/server",
   "version": "0.1.0",
   "main": "dist/index.js",
   "license": "MIT",
