--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -7,14 +7,15 @@
   "scripts": {
     "build": "tsc",
     "start": "node dist/index.js",
-    "dev": "concurrently \"tsc -w\" \"nodemon dist/index.js \"",
+    "dev": "ts-node-dev --pretty --no-notify --transpileOnly --respawn src/index.ts ",
     "lint": "eslint \"src/**\"",
     "test": "$npm_execpath run lint --fix && jest"
   },
   "dependencies": {
-    "apollo-server-express": "^2.12.0",
     "dotenv": "^8.2.0",
-    "express": "^4.17.1",
+    "fastify": "^2.13.1",
+    "fastify-cookie": "^3.6.0",
+    "fastify-gql": "^3.3.0",
     "graphql": "^14.1.1",
     "jsonwebtoken": "^8.5.1",
     "pg": "^8.0.3",
@@ -28,16 +29,15 @@
     "@types/pg": "^7.14.3",
     "@typescript-eslint/eslint-plugin": "^2.29.0",
     "@typescript-eslint/parser": "^2.29.0",
-    "concurrently": "^5.2.0",
     "eslint": "^6.8.0",
     "eslint-config-airbnb-base": "^14.1.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-prettier": "^3.1.3",
     "jest": "^25.4.0",
-    "nodemon": "^2.0.3",
     "prettier": "^2.0.5",
     "ts-jest": "^25.4.0",
+    "ts-node-dev": "^1.0.0-pre.44",
     "typescript": "^3.8.3"
   }
 }
