--- a/packages/server/tsconfig.json
+++ b/packages/server/tsconfig.json
@@ -21,5 +21,6 @@
     "experimentalDecorators": true,
     "resolveJsonModule": true
   },
+  "include": ["src/**/*.ts"],
   "exclude": ["node_modules"]
 }
