--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^8.2.0",
     "fastify": "^2.13.1",
     "fastify-cookie": "^3.6.0",
+    "fastify-cors": "^3.0.3",
     "fastify-gql": "^3.3.0",
     "graphql": "^14.1.1",
     "jsonwebtoken": "^8.5.1",
