--- a/packages/web/generate-graphql.yml
+++ b/packages/web/generate-graphql.yml
@@ -2,7 +2,7 @@ overwrite: true
 schema: '../server/schema.gql'
 documents: 'src/**/*.graphql'
 generates:
-  src/types/graphql.ts:
+  src/generated/graphql.ts:
     plugins:
       - typescript
       - typescript-operations
